Fixed Monitor event error. Cleaned code.